# sqlglot-explainer

./: .gitignore  README.md  pyproject.toml  sqlglot_explainer.ipynb
examples/: bigquery_example.sql  snowflake_example.sql
